Fix importer tests to be NZR compatible (#10903)
- Change FileDataRepository to not use hardcoded addressbook file ids
- Adapt FileDataRepository change in AddressBookServiceImpl
- Use long form EVM address in synthetic contract log and trim leading 0s
- Fix nft spender sentinel value since now encoded id can be negative
- Remove non-zero realm/shard support from account balance file parsers
- Add global test setup handler in importer to rewrite addressbook files with matching shard/realm
- Make FileCopier non-zero shard/realm aware, also add a ignoreNonZeroRealmShard flag
- Fix hardcoded address book file ids in DomainBuilder
- Fix failed test cases

Signed-off-by: Xin Li <xin@hashgraph.com>
Co-authored-by: Xin Li <xin@hashgraph.com>